...
    }
    @IBAction func registerButton(_ sender: Any) {
        router.toRegister()
    }
    
    private func showAuthError() {
        let alter = UIAlertController(title: "Ошибка", message: "Неверные логин/пароль", preferredStyle: .alert)
        let action = UIAlertAction(title: "OK", style: .cancel, handler: nil)
        alter.addAction(action)
        present(alter, animated: true, completion: nil)
    }
    @objc private func hideKeyboard() {
        self.view.endEditing(true)
    }
...
